FIX: navigation on mobile view when scrolling to section

--- a/components/App/Layout/Header/Header.module.scss
+++ b/components/App/Layout/Header/Header.module.scss
@@ -1,6 +1,10 @@
 @use "../../../../styles/base.scss" as styles;
 
 .header {
+  @include styles.breakpoint(max-width, desktop) {
+    position: fixed;
+  }
+
   border-bottom: styles.px-to-rem(1) solid styles.$amaranth-pink;
   background-color: styles.$linen;
 }
