--- a/components/App/Layout/HeaderLogo/HeaderLogo.module.scss
+++ b/components/App/Layout/HeaderLogo/HeaderLogo.module.scss
@@ -10,6 +10,7 @@
   }
 
   @include styles.breakpoint(min-width, desktop) {
+    justify-content: center;
     width: auto;
     padding: 0;
   }
